# Spin2DLattice

./: .gitignore  CMakeLists.txt  README.md
data/input/: default.json
include/: config.h  lattice.h  main.cpp
include/algorithm/: metropolis.cpp  metropolis.h  metropolis.hpp  swendsenwang.cpp  swendsenwang.hpp
include/core/: config.h  config.hpp  data.cpp  data.h  data.hpp  measurements.hpp  simulation.cpp  simulation.h  simulation.hpp
include/lattice/: atoms.cpp  atoms.h  atoms.hpp  geometry.cpp  geometry.h  geometry.hpp  spin.hpp  types.h  types.hpp
include/lattice/models/: base_model.h  heisenberg_model.h  ising_model.h  xy_model.h
include/physics/: calculator.cpp  calculator.h  calculator.hpp
include/utils/: random.h  random.hpp
scripts/: build_plots.sh  lattice.py  make_gif.py  plots.py  results.py
src/: config.cpp  lattice.cpp  main.cpp
src/algorithm/: montecarlo.cpp
src/core/: config.cpp  data.cpp  simulation.cpp
src/lattice/: atoms.cpp  geometry.cpp
src/physics/: calculator.cpp
src/utils/: logger.cpp
tests/: atoms_test.cpp  ising_test.cpp  neighbors_test.cpp  tests.h
tests/unit/: test_atoms.cpp  test_calculator.cpp  test_config.cpp  test_geometry.cpp
